--- a/Sample/Podfile
+++ b/Sample/Podfile
@@ -2,11 +2,11 @@
 platform :ios, '11.0'
 swift_version = '5.1'
 
-target 'drivers-community' do
+target 'Sample' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
-  # Pods for drivers-community
+  # Pods for Sample 
   branch = 'develop'
   git = 'git@github.com:arrvis/ios_core.git'
   pod 'ArrvisCore/Navigate', :git => git, :branch => branch
@@ -15,20 +15,18 @@ target 'drivers-community' do
   pod 'ArrvisCore/Cocoa', :git => git, :branch => branch
   pod 'ArrvisCore/HTTPRouter', :git => git, :branch => branch
 
-  pod 'R.swift'
   pod 'XCGLogger', '~> 7.0.0'
+  pod 'LifetimeTracker'
+
+  pod 'R.swift'
+  pod "RxGesture"
+
   pod 'AnyCodable-FlightSchool', '~> 0.2.3'
 
-  pod 'XLPagerTabStrip'
   pod 'Firebase/Analytics'
   pod 'Firebase/Messaging'
 
-  pod "ActionCableClient", :git => 'git@github.com:TheMenu/Swift-ActionCableClient.git', :branch => 'master'
-
-  pod "RxGesture"
   pod 'TTTAttributedLabel'
-
-  pod 'LifetimeTracker'
 end
 
 post_install do |pi|
